// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render ItemSection 1`] = `
<div
  class="container"
>
  <div
    class="title"
  >
    Select your house
  </div>
  <div
    class="children"
  >
    <div
      class="item"
    >
      <span
        class="icon"
      />
      <span>
        Villa
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      />
      <span>
        White House
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      />
      <span>
        Flat
      </span>
    </div>
  </div>
</div>
`;

exports[`Render ItemSection with value 1`] = `
<div
  class="container"
>
  <div
    class="title"
  >
    Select your house
  </div>
  <div
    class="children"
  >
    <div
      class="item"
    >
      <span
        class="icon"
      />
      <span>
        Villa
      </span>
    </div>
    <div
      class="item"
    >
      <span
        class="icon"
      />
      <span>
        White House
      </span>
    </div>
    <div
      class="item active"
    >
      <span
        class="icon"
      >
        <span
          aria-label="house"
          class="icon fa fa-house"
        />
      </span>
      <span>
        Flat
      </span>
    </div>
  </div>
</div>
`;
